2006-04-30  Aaron Stone  <aaron@serendipity.cx>

	* dbmail.conf, dbmail.h.in, pipe.c, config.c:
	Added AUTO_NOTIFY_SENDER, AUTO_NOTIFY_SUBJECT to dbmail.conf, now
	respects POSTMASTER in pipe.c, sane fallbacks (closes bug #257).

2006-04-29  Aaron Stone  <aaron@serendipity.cx>

	* server.c, lmtpd.c, pop3d.c, imapd.c, timsieved.c, dbmailtypes.h:
	Accepted hsn's backlog patch (closes bug #202).
	* db.c:
	Accepted kaname's memory leak patch (closes bug #336).

2006-04-29  Paul J Stevens <paul@nfg.nl>

	* modules/authldap.c:
	dereference bug in auth_user_validate
	* debian/rules, dm_imaputil.c, test-scripts/testimap.py:
	use dbmail_imap_astring_as_string for quoting string elements in the
	envelope response
	* debian/changelog, dm_imaputil.c, test-scripts/testimap.py:
	an other envelope fix
	* THANKS:
	add Matthew Sayler to THANKS
	* dm_imaputil.c, test-scripts/testimap.py:
	collapse address lists in envelope response

2006-04-28  Paul J Stevens <paul@nfg.nl>

	* dbmail-mailbox.c, dm_imaputil.c, test-scripts/testimap.py:
	beware of double-quotes in email-addresses
	* Makefile.am, check_dbmail_deliver.c, check_dbmail_misc.c:
	move tests from check_dbmail_misc.c to check_dbmail_deliver.c and remove
	check_dbmail_misc.c
	* dm_imaputil.c, modules/Makefile.am, modules/authldap.c, 
	  test-scripts/testimap.py:
	escape the subject before quoting in envelope response (closes: #279)

2006-04-24  Paul J Stevens <paul@nfg.nl>

	* dm_imaputil.c, test-scripts/testimap.py:
	fix double quoting in ENVELOPE response (closes: #329)
	* debian/control:
	update mysql build dependancy
	* misc.c:
	provide fallback for internaldate where %z is not provided

2006-04-24  Aaron Stone  <aaron@serendipity.cx>

	* configure.in, acinclude.m4, Makefile.am:
	Added latest getopt.m4 from Gnulib that will activate USE_DM_GETOPT
	on systems with an unfriendly getopt (closes half of bug #331).
	Added USE_DM_GETOPT flags to conditionally build gm_getopt.c.
	* misc.h, misc.c: